Update logo link in index.html to point to the homepage

--- a/dashboard/templates/Mueller_1_0_0/index.html
+++ b/dashboard/templates/Mueller_1_0_0/index.html
@@ -52,7 +52,7 @@
 
                 <div class="s-header__block">
                     <div class="s-header__logo">
-                        <a class="logo" href="index.html">
+                        <a class="logo" href="">
                             <img src="{% static 'images/logo.svg' %}" alt="Homepage">
                         </a>
                     </div>
