--- a/dashboard/templates/SEODash-main/src/html/index.html
+++ b/dashboard/templates/SEODash-main/src/html/index.html
@@ -187,7 +187,10 @@
                       <i class="ti ti-list-check fs-6"></i>
                       <p class="mb-0 fs-3">My Task</p>
                     </a>
-                    <a href="{% url 'authentication-login' %}" class="btn btn-outline-primary mx-3 mt-2 d-block">Logout</a>
+                    <form method="post" action="{% url 'logout' %}" style="display: inline;">
+    {% csrf_token %}
+    <button type="submit" class="btn btn-outline-primary mx-3 mt-2 d-block">Logout</button>
+</form>
                   </div>
                 </div>
               </li>
