Rename sample page to videos page and update related URLs and views

--- a/dashboard/templates/SEODash-main/src/html/icon-tabler.html
+++ b/dashboard/templates/SEODash-main/src/html/icon-tabler.html
@@ -210,7 +210,7 @@
               <li class="sidebar-item">
                 <a
                   class="sidebar-link"
-                  href="{% url 'sample-page' %}"
+                  href="{% url 'videos-page' %}"
                   aria-expanded="false"
                 >
                   <span>
@@ -219,7 +219,7 @@
                       class="fs-6"
                     ></iconify-icon>
                   </span>
-                  <span class="hide-menu">Sample Page</span>
+                  <span class="hide-menu">Videos Page</span>
                 </a>
               </li>
             </ul>
