--- a/dashboard/templates/SEODash-main/src/html/index.html
+++ b/dashboard/templates/SEODash-main/src/html/index.html
@@ -118,11 +118,11 @@
               </a>
             </li>
             <li class="sidebar-item">
-              <a class="sidebar-link" href="{% url 'sample-page' %}" aria-expanded="false">
+              <a class="sidebar-link" href="{% url 'videos-page' %}" aria-expanded="false">
                 <span>
                   <iconify-icon icon="solar:planet-3-bold-duotone" class="fs-6"></iconify-icon>
                 </span>
-                <span class="hide-menu">Sample Page</span>
+                <span class="hide-menu">Videos Page</span>
               </a>
             </li>
           </ul>
